Fixes stuck on alert button. Shrinks a bit container

--- a/style.css
+++ b/style.css
@@ -7,20 +7,18 @@ h1 {
   div {
     margin: 0p 0px;  
     box-sizing: content-box;
+    max-width: 100%;
   }
   
   .hor {
     background-color: white;
     display: inline-block;
-    width: 6%;
-    height: 100%;
     font-size: 0;
     flex-grow: 1;
   }
   
   .ver {
     float:left;
-    clear:none;
     font-size: 0;
     display: flex;
     flex-grow: 1;
@@ -28,15 +26,17 @@ h1 {
   
   .container {
     font-size: 0;
-    height: 800px;
-    width: 800px;
+    height: 700px;
+    width: 700px;
     margin: 2% auto;
     display: flex;
     flex-direction: column;
     border: 3px solid black;
     border-radius: 5px;
+
   }
   
+
   .activated {
     background-color: black;
     
@@ -47,7 +47,7 @@ h1 {
   }
 
   #changeSize {
-    margin: 0px auto;
+    outline: none;
     background-color: white;
     padding: 15px 32px;
     text-align: center;
@@ -57,6 +57,7 @@ h1 {
     transition-duration: 0.4s;
     border-radius: 5px;
     font-family: 'Karla', sans-serif;
+    width: 250px;
   }
   
   #changeSize:hover {
